fixed spacing on how it works homepage section, fixed underline and text position on homepage button

--- a/static/homepage-styles.css
+++ b/static/homepage-styles.css
@@ -42,9 +42,9 @@
     border-radius: 25px;
   }
   
-  /* .step-home{
-    padding: 0% 10%;
-  } */
+  .step-home{
+    padding-bottom:2%;
+  }
   
   .steps-header{
     /* padding-bottom: 2%; */
@@ -56,9 +56,9 @@
   .step-title {
     font-size: 1.7rem;
     font-weight: 500;
-    padding: 5%;
+    padding: 5% 5% 0;
     text-align: center;
-    line-height: .7;
+    line-height: .9;
   
   }
   .step-text{
@@ -74,7 +74,7 @@
     justify-content: center;
     flex-direction: column;
     color:rgba(243, 172, 18, 1);
-    padding-top: 15%;
+    padding-top: 5%;
   
   }
   
@@ -83,7 +83,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column; */
-    padding: 0 20%;
+    padding: 0 30%;
   }
   .get-started-link {
     text-decoration: none !important;
